<resources>
    <string name="app_name">Basic Calculator</string>
    <string name="eq">=</string>
    <string name="add">+</string>
    <string name="subs">-</string>
    <string name="div">÷</string>
    <string name="mult">x</string>
    <string name="z">0</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="c">C</string>
    <string name="delete">delete</string>
    <string name="name">Simple Calculator</string>
    <string name="mehedi">Mehedi</string>
    <string name="dot">.</string>
</resources>